[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "media_monitoring"
version = "0.0.1"
description = "An analytics platform for media monitoring department."
authors = [
  { name = "ochiengfrancis/farsight" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["media_monitoring"]
force_sort_within_sections = true
